2020-04-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_bar.c: Reduce the scope of variables in
      geda_menu_bar_size_allocate. Replace gtk_container_get_border_width
      with geda_get_container_border_width.

2020-04-15 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_bar.c: Change get_shadow_type argument type to a
      pointer to a GtkWidget, revise geda_menu_bar_size_request to explicitly
      shift left to multiply by 2. Reduce the scope of all variables in
      geda_menu_bar_size_request. Utilize macro:

          * geda_get_container_border_width

2020-04-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Revise/update function documentation,
      Revise geda_combo_box_set_model to utilize the pointer returned from
      g_object_ref, revise geda_combo_box_append_text to validate the text
      is utf8.

    * src/widgets/geda_menu.c: Revise geda_menu_reparent to eliminate
      ancillary widget and use ancillary parent. Revise geda_menu_attach to
      not validate parent is not NULL, otherwise the then clause of the
      conditional would be pointless.

    * src/widgets/geda_menu_bar.c: Utilize macros:

          * geda_set_widget_allocation
          * geda_get_widget_window

2020-04-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Revise geda_menu_position to use accessor
      gtk_widget_get_size_request. Utilize macros:

          * geda_get_adjustment_value
          * geda_get_adjustment_upper
          * geda_get_adjustment_page_size
          * geda_set_adjustment_value


2020-04-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Remove validating GtkTreeModel in function
      geda_combo_box_new_with_model and revise documentation to stipulate why.
      Eliminate checking for NULL model in geda_combo_box_set_model.

2020-04-02 Wiley E. Hill <wileyhill@gmail.com>
